--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="container-fluid font-bold p-3 w-75 d-flex justify-content-center">
+  <div class="p-3 font-bold container-fluid w-75 d-flex justify-content-center">
     <%= f.label :email %><br  />
     <div class="ml-4">
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
@@ -12,10 +12,10 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
   </div>
-  <div class="container-fluid  p-3 w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
-  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
+  <div class="p-3 container-fluid w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
+  <div class="p-3 container-fluid w-75 d-flex justify-content-center">
 
-   <div class=" font-bold ml-20  d-flex justify-content-center">
+   <div class="ml-20 font-bold d-flex justify-content-center">
     <%= f.label :password %>
     </div><br  />
     <%= f.password_field :password, autocomplete: "new-password" %>
@@ -24,26 +24,26 @@
       <br />
     <% end %>
   </div>
-  <div class="container-fluid font-bold p-3 w-75 d-flex justify-content-center">
+  <div class="p-3 font-bold container-fluid w-75 d-flex justify-content-center">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 </div>
-<div class="d-flex  justify-content-center">(we need your current password to confirm your changes)<br /></div>
-  <div class="container-fluid font-bold  p-3 w-75 d-flex justify-content-center">
+<div class="d-flex justify-content-center">(we need your current password to confirm your changes)<br /></div>
+  <div class="p-3 font-bold container-fluid w-75 d-flex justify-content-center">
    <div class="ml-2">
     <%= f.label :current_password %><br />
     </div>
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
-  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
+  <div class="w-12 p-3 m-6 font-bold text-white bg-blue-600 rounded-full d-flex justify-content-center">
     <%= f.submit "Update" %>
   </div>
 <% end %>
 
 
-<div class="container-fluid p-3 w-25 d-flex justify-content-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<div class="p-3 container-fluid w-25 d-flex justify-content-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 <div class="d-flex justify-content-center">
 <%= link_to "Back", :back,  class: "bg-blue-600 w-25 d-flex justify-content-center text-white m-6 p-3 rounded-full font-bold" %>
 </div>
