--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@ Bio
    <div class="">
     <% @user.posts.each do |e| %>
         <div class="flex-col p-3 mx-8 my-4 border-4 md:w-84 d-flex border-indigo-500/100">
-             <%= link_to "Post ##{e.title}", class: "post-heading" %>
+            Post #<%= e.title %>
             <p><%= e.text %></p>
             <div>
             <span>Comments:<%= e.comments_counter || 0%></span>
