--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -5,7 +5,7 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", class: 'p-2'  %>
   </div>
 
-  <div class="p-3 m-3 container-fluid d-flex justify-content-center w-75">
+  <div class="justify-center p-3 m-3 container-fluid d-flex w-75">
     <%= f.password_field :password, autocomplete: "new-password" , placeholder: "Password", class: 'p-2'  %>
   </div>
 
