--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
     <%= f.password_field :password, autocomplete: "new-password" , placeholder: "Password", class: 'p-2'  %>
   </div>
 
-  <div class="p-3 m-3 container-fluid d-flex justify-content-center w-75">
+  <div class="justify-center p-3 m-3 container-fluid d-flex w-75">
     <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password", class: 'p-2'  %>
   </div>
    </div>
