--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,7 +30,7 @@
   </div>
 </div>
 <div class="d-flex justify-content-center">(we need your current password to confirm your changes)<br /></div>
-  <div class="p-3 font-bold container-fluid w-75 d-flex justify-content-center">
+  <div class="justify-center p-3 font-bold container-fluid w-75 d-flex">
    <div class="ml-2">
     <%= f.label :current_password %><br />
     </div>
