--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
   </div>
-  <div class="p-3 container-fluid w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
+  <div class="justify-center p-3 container-fluid w-75 d-flex">(leave blank if you don't want to change it)</div>
   <div class="justify-center p-3 container-fluid w-75 d-flex">
 
    <div class="justify-center ml-20 font-bold d-flex">
