--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="p-3 font-bold container-fluid w-75 d-flex justify-content-center">
+  <div class="justify-center p-3 font-bold container-fluid w-75 d-flex">
     <%= f.label :email %><br  />
     <div class="ml-4">
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
