--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <p class="justify-center container-fluid d-flex"><%= notice %></p>
   <% end %>
   <% if alert %>
-    <p class="d-flex justify-content-center"><%= alert %></p>
+    <p class="justify-center d-flex"><%= alert %></p>
   <% end %>
     <%= yield %>
   </body>
