--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
   <%= link_to 'Edit profile', edit_user_registration_path, :class => 'd-flex  justify-center font-bold text-white bg-blue-500' %> |
  <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
 <% else %>
-  <%= link_to "Sign up", new_user_registration_path, :class => 'd-flex mt-6 p-2 justify-center font-bold text-white bg-blue-500'  %> |
+  <%= link_to "Sign up", new_user_registration_path, :class => 'd-flex mt-6 ml-4 p-2 justify-center font-bold text-white bg-blue-500'  %> |
   <%= link_to "Login", new_user_session_path, :class => 'd-flex  justify-center mt-6 p-2 font-bold text-white bg-blue-500'  %>
 <% end %>
 </div>
