--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -12,7 +12,7 @@
 <% end %>
 </div>
 
-<div class="container-fluid d-flex justify-content-center">
+<div class="ml-4 container-fluid d-flex justify-content-center">
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
   <%= link_to "Didn't receive unlock instructions?", new_unlock_path(resource_name) %><br />
 <% end %>
