--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
   </div>
    </div>
   <div class="container p-3 font-bold text-white bg-blue-600 border-solid d-flex w-80 border-3 ">
-    <%= f.submit "Sign up" %>
+    <%= f.submit "Sign up" , %>
   </div>
 
 <% end %>
