--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
   </div>
    </div>
 
-    <%= f.submit "Sign up" , class: "bg-blue-600  d-flex justify-center text-white ml-3 p-3 border-solid w-80 font-bold" %>
+    <%= f.submit "Sign up" , class: "bg-blue-600  d-flex justify-center text-white p-3 border-solid w-80 font-bold" %>
 
 <% end %>
 
